--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <app-header></app-header>
 
-<div class="container">
+<div class="container mb-5">
   <div class="row">
     <div class="col">
       <app-add-todo></app-add-todo>
-      <app-list-todos></app-list-todos>
     </div>
+    <hr />
   </div>
 </div>
+
+<app-list-todos></app-list-todos>
