Modified components and data flow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
 <app-header></app-header>
-
-<div class="container mb-5">
-  <div class="row">
-    <div class="col">
-      <app-add-todo></app-add-todo>
-    </div>
-    <hr />
-  </div>
-</div>
-
-<app-list-todos></app-list-todos>
+<app-todos></app-todos>
