--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,5 +1,5 @@
 <div class="container mb-3">
-  <div class="row">
+  <div class="row justify-content-center">
     <div class="col">
       <app-add-todo></app-add-todo>
     </div>
@@ -9,11 +9,8 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-5">
+    <div class="col">
       <app-list-todos class="list-group"></app-list-todos>
-    </div>
-    <div class="col-7 pt-2 pl-5">
-      <app-detail *ngIf="selectedTodo" [todo]="selectedTodo"></app-detail>
     </div>
   </div>
 </div>
