--- a/src/app/todos/list-todos/todo-item/todo-item.component.html
+++ b/src/app/todos/list-todos/todo-item/todo-item.component.html
@@ -1,11 +1,13 @@
-<div class="item">
+<div [ngClass]="getStatusCssClass(todo.status)">
   <label class="form-check-label">
-    <input class="form-check-input" type="checkbox" (click)="onSetStatus(todostatus)" #todostatus>
+    <input class="form-check-input"
+           type="checkbox"
+           [checked]="getStatusChecked(todo.status)"
+           (click)="onSetStatus(todostatus)"
+           #todostatus>
   </label>
 
-  <a href="#" (click)="selectTodo(todo)">{{todo.name}}</a>
-
-  <span>{{ todo.status }}</span>
+  <a href="#" class="" (click)="selectTodo(todo)">{{todo.name}}</a>
 
   <a href="#" class="float-right" (click)="removeItem(todo);">Remove</a>
 </div>
