--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-light bg-primary mb-5">
-  <a href="#" class="title">ToDo App</a>
+  <a href="/" class="title">ToDo App</a>
 </nav>
