--- a/src/app/todos/add-todo/add-todo.component.html
+++ b/src/app/todos/add-todo/add-todo.component.html
@@ -8,7 +8,7 @@
 </p>
 
 <div class="input-group input-group-lg mb-4">
-  <input type="text" class="form-control" placeholder="Add your To-Do" (input)="changeInput($event)" (keyup.enter)="onAddTodo(addTodoItem)" #addTodoItem>
+  <input type="text" class="form-control" placeholder="" (input)="changeInput($event)" (keyup.enter)="onAddTodo(addTodoItem)" #addTodoItem>
   <span class="input-group-btn">
     <button class="btn btn-primary" type="button" (click)="onAddTodo(addTodoItem)" [disabled]="buttonState">Add To-Do</button>
   </span>
