Added filtering features

--- a/src/app/todos/list-todos/list-todos.component.html
+++ b/src/app/todos/list-todos/list-todos.component.html
@@ -1,7 +1,7 @@
 <app-todo-item class="list-group-item" *ngFor="let todoEl of todos" [todo]="todoEl"></app-todo-item>
 
-<div class="filter btn-group justify-content-center mt-4" *ngIf="todos.length > 0">
+<footer class="filter btn-group justify-content-center mt-4" *ngIf="todos.length > 0">
   <a href="#" [ngClass]="isFilterActive('all')" (click)="onSetFilter('all')">All</a>
   <a href="#" [ngClass]="isFilterActive('incomplete')" (click)="onSetFilter('incomplete')">Incomplete</a>
   <a href="#" [ngClass]="isFilterActive('complete')" (click)="onSetFilter('complete')">Completed</a>
-</div>
+</footer>
