Removed footer state

--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -10,7 +10,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <app-list-todos class="list-group" [footerState]="footerState"></app-list-todos>
+      <app-list-todos class="list-group"></app-list-todos>
     </div>
   </div>
 </div>
