--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,8 @@
 <nav class="navbar mb-5">
-  <a href="/" class="title">ToDo App</a>
+  <a href="/" class="navbar-brand title">Todo App</a>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#" [toggleName]="'add-todo'" appToggleAdd>Add Todo extended</a>
+    </li>
+  </ul>
 </nav>
