--- a/src/app/todos/list-todos/todo-item/todo-item.component.scss
+++ b/src/app/todos/list-todos/todo-item/todo-item.component.scss
@@ -20,8 +20,18 @@
       position: absolute;
       top: 0;
       width: 100%;
+      z-index: 100;
+    }
+  }
+
+  a {
+    opacity: 0;
+    transition: opacity 0.4s ease;
+  }
+
+  &:hover {
+    a {
+      opacity: 1;
     }
   }
 }
-
-
