--- a/src/app/todos/list-todos/list-todos.component.html
+++ b/src/app/todos/list-todos/list-todos.component.html
@@ -5,3 +5,29 @@
   <a href="#" [ngClass]="isFilterActive('incomplete')" (click)="onSetFilter('incomplete')">Incomplete</a>
   <a href="#" [ngClass]="isFilterActive('complete')" (click)="onSetFilter('complete')">Completed</a>
 </footer>
+
+<div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">
+          {{ selectedTodo.name }}
+        </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div *ngIf="selectedTodo">
+          <img src="{{ selectedTodo.image }}" alt="{{ selectedTodo.name }}" *ngIf="selectedTodo.image">
+          <p *ngIf="selectedTodo.description">
+            {{ selectedTodo.description }}
+          </p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
