--- a/src/app/todos/list-todos/todo-item/todo-item.component.scss
+++ b/src/app/todos/list-todos/todo-item/todo-item.component.scss
@@ -22,6 +22,18 @@
       width: 100%;
       z-index: 100;
     }
+
+    a {
+      display: block;
+      margin: 0 3px;
+      position: relative;
+
+      &:after {
+        border-right: solid 2px red;
+        content: "";
+        display: inline-block;
+      }
+    }
   }
 
   a {
