--- a/src/app/todos/detail/detail.component.html
+++ b/src/app/todos/detail/detail.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" *ngIf="todo">
+<div class="modal fade" id="detailModal" tabindex="-1" role="dialog" *ngIf="todo">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
