--- a/src/app/todos/list-todos/todo-item/todo-item.component.html
+++ b/src/app/todos/list-todos/todo-item/todo-item.component.html
@@ -13,6 +13,6 @@
     <input type="text" class="form-control edit-value" [value]="todo.name" (blur)="editingFinished(todo, editedtodo.value)" (keyup.enter)="editingFinished(todo, editedtodo.value)" *ngIf="editTodo" #editedtodo>
 
     <a href="#" class="float-right text-secondary" (click)="removeItem(todo);">Remove</a>
-    <a href="#" class="float-right text-secondary" (click)="showDetail(todo);" data-toggle="modal" data-target="#exampleModal">Details</a>
+    <a href="#" class="float-right text-secondary" (click)="showDetail(todo);" data-toggle="modal" data-target="#detailModal" *ngIf="todo.image">Details</a>
   </div>
 </div>
